src/pages/Projects/Projects.module.css
.image {
  flex: 2;
  height: 8rem;
  margin-bottom: 1rem;
  border-radius: 1rem;
  background-color: hsl(0, 0%, 50%);
}

.doubleButton {
  display: flex;
  flex-direction: row;
  gap: 1rem;
  margin-bottom: 1rem;
}

.doubleButton > a {
  display: flex;
  justify-content: center;
  align-items: center;
  flex: 1;
  border: none;
  border-radius: 1rem;
  padding-block: 1rem;
  background-color: var(--primary-color);
  font-size: 1rem;
  text-align: center;
  text-decoration: none;
  cursor: pointer;
  transition: background-color 0.1s, color 0.1s;
}

.doubleButton > a:hover {
  background-color: #fff;
  color: var(--primary-color);
}

.doubleButton > a:hover * {
  color: var(--primary-color);
  transition: color 0.1s;
}

.description {
  margin-bottom: 1rem;
}

.doubleList {
  display: flex;
  flex-direction: row;
  column-gap: 1rem;
}

.doubleList > div {
  flex: 1;
}

.doubleList > div > h3 {
  margin-bottom: 0.5rem;
  text-align: center;
}

@media (min-width: 641px) {
  .imageAndButtons {
    display: flex;
    gap: 1rem;
  }

  .doubleButton {
    flex-direction: column;
    flex: 1;
  }
}

@media (min-width: 1008px) {
  .image {
    height: 16rem;
  }

  .descriptionAndLists {
    display: flex;
    gap: 1rem;
  }

  .description {
    flex: 1;
  }

  .doubleList {
    flex: 2;
  }
}

